force-app/src/objects/OrderApi__EPayment_Line__c.object
<CustomObject>
    <description>Tracks how E-Payments (if successful) will be applied in the system, either to an Item or Invoice.</description>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Activity_Type__c</fullName>
        <description>**System Calculated** The parent activity &quot;Transaction Type&quot;.</description>
        <formula>IF(OrderApi__EPayment__r.OrderApi__Transaction_Type__c != NULL,UPPER(LEFT(OrderApi__EPayment__r.OrderApi__Transaction_Type__c,1)) &amp; RIGHT(OrderApi__EPayment__r.OrderApi__Transaction_Type__c,LEN(OrderApi__EPayment__r.OrderApi__Transaction_Type__c) - 1),&quot;Scheduled/Pending Payment&quot;)</formula>
        <inlineHelpText>**System Calculated** The parent activity &quot;Transaction Type&quot;.</inlineHelpText>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated Override ** Valid if the EPayment Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the EPayment Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated/Override** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated to show the related contact.</description>
        <inlineHelpText>This field is populated to show the related contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ePayment Lines</relationshipLabel>
        <relationshipName>ePayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related parent EPayment Line.</description>
        <inlineHelpText>Link to related parent EPayment Line.</inlineHelpText>
        <label>Parent EPayment Line</label>
        <referenceTo>OrderApi__EPayment_Line__c</referenceTo>
        <relationshipLabel>ePayment Lines</relationshipLabel>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__EPayment__c</fullName>
        <description>**Required** Link to the related E-Payment.</description>
        <inlineHelpText>**Required** Link to the related E-Payment.</inlineHelpText>
        <label>E-Payment</label>
        <referenceTo>OrderApi__EPayment__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Foreign_Key__c</fullName>
        <description>System Field, For Coding purposes only. Used to efficiently insert epayment lines and its related child epayment lines in our system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert epayment lines and its related child epayment lines in our system.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates epayment lines to invoice lines.</description>
        <inlineHelpText>Relates epayment lines to invoice lines.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>EPayment Lines</relationshipLabel>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Invoice. Payment Activity Lines must be linked to one and only one Invoice, Credit Memo, or Sales Order.</description>
        <inlineHelpText>Link to related Invoice. Payment Activity Lines must be linked to one and only one Invoice, Credit Memo, or Sales Order.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, related EPayment Line is considered as &quot;Subscription Renewal&quot;.</description>
        <inlineHelpText>When checked, related EPayment Line is considered as &quot;Subscription Renewal&quot;.</inlineHelpText>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the EPayment Line that is being used for tax.</description>
        <inlineHelpText>Defines the EPayment Line that is being used for tax.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Item Class</description>
        <inlineHelpText>Link to related Item Class</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>ePayment Lines</relationshipLabel>
        <relationshipName>ePayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to related Item.</description>
        <inlineHelpText>**Required** Link to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>EPayment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Parent_Foreign_Key__c</fullName>
        <description>System Field, For Coding purposes only. Used to efficiently insert epayment lines and its related child epayment lines in our system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert epayment lines and its related child epayment lines in our system.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method__c</fullName>
        <description>**System Calculated** The payment activity payment method type.</description>
        <formula>IF(OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c != null,
IF(OrderApi__EPayment__r.OrderApi__Payment_Method_Type__c == &apos;credit_card&apos;, &quot;&quot;, &quot;E-Check &quot;)
&amp;
UPPER(OrderApi__EPayment__r.OrderApi__Card_Type__c)
&amp; &quot; &quot; &amp;
OrderApi__EPayment__r.OrderApi__Number__c
&amp; &quot; (Expires &quot; &amp;
TEXT(OrderApi__EPayment__r.OrderApi__Month__c)
&amp; &quot;/&quot; &amp;
TEXT(OrderApi__EPayment__r.OrderApi__Year__c)
&amp; &quot;)&quot;
,
&quot;&quot;
)</formula>
        <inlineHelpText>**System Calculated** The payment activity payment method type.</inlineHelpText>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</description>
        <inlineHelpText>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to related Price Rule applied for the related Item.</description>
        <inlineHelpText>**System Calculated/Override** Link to related Price Rule applied for the related Item.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipName>EPayment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>**Required** Quantity of Items. Default 1.</description>
        <inlineHelpText>**Required** Quantity of Items. Default 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</description>
        <inlineHelpText>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order Line.</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>ePayment Lines</relationshipLabel>
        <relationshipName>ePayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order.</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order.</inlineHelpText>
        <label>Sales Order</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>ePayment Lines</relationshipLabel>
        <relationshipName>ePayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>**System Calculated** Icon representation of the payment activities status.</description>
        <formula>OrderApi__EPayment__r.OrderApi__Status__c</formula>
        <inlineHelpText>**System Calculated** Icon representation of the payment activities status.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the EPayment Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the EPayment Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription that is being upgraded or renewed.</description>
        <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
        <label>Subscription (Upgrade/Renew)</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipName>EPayment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Quantity * Sale Price</description>
        <formula>OrderApi__Quantity__c *  OrderApi__Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Quantity * Sale Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to override any tax calculations by the system.</description>
        <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
        <label>Tax Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Combined with the Parent EPayment Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
        <inlineHelpText>Combined with the Parent EPayment Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**Required** The amount (currency) for payment and/or refund (depending on payment activity type) for the payment activity line. Default value is 0.00.</description>
        <inlineHelpText>**Required** The amount (currency) for payment and/or refund (depending on payment activity type) for the payment activity line. Default value is 0.00.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>ePayment Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ePayment Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ePayment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>